# testfigures

./: CMakeLists.txt  circle.cpp  circle.h  colors.h  display.cpp  display.h  figure.cpp  figure.h  main.cpp  polygon.cpp  polygon.h  quad.cpp  quad.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h  viewer.cpp  viewer.h
